// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer - EmailSerializer should align heading correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;"
>
  <h1
    style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
  >
    Plain Heading
  </h1>
  <div
    style="width: 100%;text-align: center;"
  >
    <h1
      style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
    >
      Heading with center alignment
    </h1>
  </div>
  <div
    style="width: 100%;text-align: right;"
  >
    <h1
      style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
    >
      Heading with end alignment
    </h1>
  </div>
</div>
`;

exports[`Renderer - EmailSerializer should align paragraph correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;"
>
  <p
    style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
  >
    Plain Paragraph
  </p>
  <div
    style="width: 100%;text-align: center;"
  >
    <p
      style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
    >
      Paragraph with center alignment
    </p>
  </div>
  <div
    style="width: 100%;text-align: right;"
  >
    <p
      style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
    >
      Paragraph with end alignment
    </p>
  </div>
</div>
`;

exports[`Renderer - EmailSerializer should inline code properties correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;"
>
  <code
    style="background: rgb(244, 245, 247);color: rgb(23, 43, 77);border-radius: 3px;padding: 2px 4px;font-size: 12px;line-height: 24px;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
  >
    const foo = bar();
  </code>
</div>
`;

exports[`Renderer - EmailSerializer should inline text properties correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;"
>
  <p
    style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
  >
    foo
  </p>
</div>
`;

exports[`Renderer - EmailSerializer should render codeblock correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;"
>
  <pre
    style="background: rgb(244, 245, 247);border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;"
  >
    <table
      style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
    >
      <tbody>
        <tr>
          <td
            style="padding: 8px 16px;background-color: rgb(244, 245, 247);border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;font-size: 12px;line-height: 20px;color: rgb(23, 43, 77);"
          >
            <code
              style="color: rgb(23, 43, 77);display: block;font-size: 12px;line-height: 20px;white-space: pre;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
            >
              // Create a map.
final IntIntOpenHashMap map = new IntIntOpenHashMap();
map.put(1, 2);
map.put(2, 5);
map.put(3, 10);
int count = map.forEach(new IntIntProcedure()
{
   int count;
   public void apply(int key, int value)
   {
       if (value &gt;= 5) count++;
   }
}).count;
System.out.println("There are " + count + " values &gt;= 5");
            </code>
          </td>
        </tr>
      </tbody>
    </table>
  </pre>
</div>
`;

exports[`Renderer - EmailSerializer should render link 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;"
>
  <a
    href="https://www.atlassian.com"
    style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
  >
    Hello, world!
  </a>
</div>
`;

exports[`Renderer - EmailSerializer should render panels correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;"
>
  <table
    align="left"
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
    valign="top"
  >
    <tbody>
      <tr>
        <td
          align="left"
          border="0"
          cellpadding="0"
          cellspacing="0"
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 8px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
          valign="top"
        >
          <table
            align="left"
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
            valign="top"
          >
            <tbody>
              <tr>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-size: 0;"
                  valign="top"
                >
                  <img
                    alt=""
                    border="0"
                    height="32"
                    src="https://1x1-placeholder-transparent-image-goes-here.png"
                    style="display: block;"
                    width="1"
                  />
                </td>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #DEEBFF;"
                  valign="top"
                >
                  <p
                    style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
                  >
                    This is an info panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    align="left"
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
    valign="top"
  >
    <tbody>
      <tr>
        <td
          align="left"
          border="0"
          cellpadding="0"
          cellspacing="0"
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 8px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
          valign="top"
        >
          <table
            align="left"
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
            valign="top"
          >
            <tbody>
              <tr>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-size: 0;"
                  valign="top"
                >
                  <img
                    alt=""
                    border="0"
                    height="32"
                    src="https://1x1-placeholder-transparent-image-goes-here.png"
                    style="display: block;"
                    width="1"
                  />
                </td>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #EAE6FF;"
                  valign="top"
                >
                  <p
                    style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
                  >
                    This is a note panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    align="left"
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
    valign="top"
  >
    <tbody>
      <tr>
        <td
          align="left"
          border="0"
          cellpadding="0"
          cellspacing="0"
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 8px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
          valign="top"
        >
          <table
            align="left"
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
            valign="top"
          >
            <tbody>
              <tr>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-size: 0;"
                  valign="top"
                >
                  <img
                    alt=""
                    border="0"
                    height="32"
                    src="https://1x1-placeholder-transparent-image-goes-here.png"
                    style="display: block;"
                    width="1"
                  />
                </td>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #E3FCEF;"
                  valign="top"
                >
                  <p
                    style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
                  >
                    This is a tip panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    align="left"
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
    valign="top"
  >
    <tbody>
      <tr>
        <td
          align="left"
          border="0"
          cellpadding="0"
          cellspacing="0"
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 8px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
          valign="top"
        >
          <table
            align="left"
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
            valign="top"
          >
            <tbody>
              <tr>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-size: 0;"
                  valign="top"
                >
                  <img
                    alt=""
                    border="0"
                    height="32"
                    src="https://1x1-placeholder-transparent-image-goes-here.png"
                    style="display: block;"
                    width="1"
                  />
                </td>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #E3FCEF;"
                  valign="top"
                >
                  <p
                    style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
                  >
                    This is a success panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    align="left"
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
    valign="top"
  >
    <tbody>
      <tr>
        <td
          align="left"
          border="0"
          cellpadding="0"
          cellspacing="0"
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 8px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
          valign="top"
        >
          <table
            align="left"
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
            valign="top"
          >
            <tbody>
              <tr>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-size: 0;"
                  valign="top"
                >
                  <img
                    alt=""
                    border="0"
                    height="32"
                    src="https://1x1-placeholder-transparent-image-goes-here.png"
                    style="display: block;"
                    width="1"
                  />
                </td>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #FFFAE6;"
                  valign="top"
                >
                  <p
                    style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
                  >
                    This is a warning panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    align="left"
    border="0"
    cellpadding="0"
    cellspacing="0"
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
    valign="top"
  >
    <tbody>
      <tr>
        <td
          align="left"
          border="0"
          cellpadding="0"
          cellspacing="0"
          style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;padding: 8px 8px 8px 8px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;width: 100%;"
          valign="top"
        >
          <table
            align="left"
            border="0"
            cellpadding="0"
            cellspacing="0"
            style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0;padding: 0;width: 100%;border-spacing: 0px;"
            valign="top"
          >
            <tbody>
              <tr>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-size: 0;"
                  valign="top"
                >
                  <img
                    alt=""
                    border="0"
                    height="32"
                    src="https://1x1-placeholder-transparent-image-goes-here.png"
                    style="display: block;"
                    width="1"
                  />
                </td>
                <td
                  align="left"
                  border="0"
                  cellpadding="0"
                  cellspacing="0"
                  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;width: 100%;padding: 1px 0px 1px 8px;margin: 0px;background: #FFEBE6;"
                  valign="top"
                >
                  <p
                    style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
                  >
                    This is a error panel with 
                    <span
                      style="font-weight: bold;"
                    >
                      bold text
                    </span>
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Renderer - EmailSerializer should render paragraph with indentations 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;"
>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 30px;"
        >
          <p
            style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
          >
            Paragraph with 1 level of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 60px;"
        >
          <p
            style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
          >
            Paragraph with 2 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 90px;"
        >
          <p
            style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
          >
            Paragraph with 3 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 120px;"
        >
          <p
            style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
          >
            Paragraph with 4 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 150px;"
        >
          <p
            style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
          >
            Paragraph with 5 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 180px;"
        >
          <p
            style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
          >
            Paragraph with 6 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Renderer - EmailSerializer should render status correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;"
>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #DEEBFF;color: #0747A6;"
  >
    In progress
  </span>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #DFE1E6;color: #42526E;"
  >
    Neutral
  </span>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #FFEBE6;color: #BF2600;"
  >
    Overdue
  </span>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #FFF0B3;color: #172B4D;"
  >
    Yellow
  </span>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #EAE6FF;color: #403294;"
  >
    Purple
  </span>
  <span
    style="border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;box-sizing: border-box;display: inline-block;font-size: 11px;font-weight: 700;line-height: 1;max-width: 100%;text-transform: uppercase;vertical-align: baseline;padding: 2px 4px 3px 4px;background-color: #E3FCEF;color: #006644;"
  >
    Green
  </span>
</div>
`;

exports[`Renderer - EmailSerializer should render text with em inside of a paragraph correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14px;font-weight: 400;line-height: 24px;"
>
  <p
    style="margin: 0;padding: 7px 0px 7px 0px;mso-line-height-rule: exactly;line-heght: 24px;font-size: 14px;"
  >
    <a
      href="https://www.atlassian.com"
      style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
    >
      Hello, 
    </a>
    <span
      style="font-weight: bold;"
    >
      <a
        href="https://www.atlassian.com"
        style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
      >
        World!
      </a>
    </span>
     Look I can do 
    <span
      style="font-style: italic;"
    >
      italic 
    </span>
    <span
      style="font-weight: bold;"
    >
      <span
        style="font-style: italic;"
      >
        , strong 
      </span>
    </span>
    <span
      style="text-decoration: underline;"
    >
      <span
        style="font-weight: bold;"
      >
        <span
          style="font-style: italic;"
        >
          and underlined text!
        </span>
      </span>
    </span>
  </p>
</div>
`;
